# django-reactive-framework

./: .gitignore  LICENSE  MANIFEST.in  Procfile  README.md  requirements.txt  setup.cfg  urls.py
.github/workflows/: django-tests.yml  packaging-tests  packaging-tests.yml
core/: base.py  expressions.py  reactive_binary_operators.py  reactive_function.py  utils.py
example/example/: settings.py  urls.py
example/example/tests/: test_example_page_response.py
resources/: reactscripts.js
src/django_reactive/: apps.py
src/django_reactive_framework/: __init__.py  apps.py  urls.py
src/django_reactive_framework/core/: base.py  expressions.py  public.py  reactive_binary_operators.py  reactive_function.py  reactive_unary_operators.py  utils.py
src/django_reactive_framework/core/expressions/: __init__.py  implementations.py  interfaces.py
src/django_reactive_framework/resources/: reactscripts.js
src/django_reactive_framework/templates/: reactive_example.html
src/django_reactive_framework/templatetags/: reactive.py
static/js/: reactscripts.js
templates/: reactive_example.html
templatetags/: reactive.py
