[metadata]
name = django-reactive-framework
version = 0.0.1
author = Tal Hadad
description = A minimalistic reactive framework for Django Templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tal500/django-reactive-framework
project_urls =
    Bug Tracker = https://github.com/Tal500/django-reactive-framework/issues
keywords = django ,reactive, javascript, html, frontend, reactive-programming
license = MIT
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent
    Environment :: Web Environment
    Framework :: Django

[options]
zip_safe = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    Django>=3.2.3

[options.packages.find]
where = src